# cloud-computing-labs

./: .gitignore  README.md
Lab 1/: .gitignore
Lab 1/design/: consumer.py  labels.csv  producer.py
Lab 1/v1/: consumer.py  producer.py
Lab 1/v2/: consumer.py  smartMeter.py
Lab 2/: car_location.sql  producer.py
Lab 3/milestone-3/: Dockerfile  depth_detection.ipynb  docker-compose.yml  env-setup.py  pipeline.ipynb  pyproject.toml  requirements.txt  setup.py
Lab 3/milestone-3/src/: consumer.py  dataflow.py  m3.py  producer.py  test.py
Lab 3/milestone-3/src/milestone/: __init__.py  depth.py  milestone.py
Lab 3/mnist-demo/: consumerMnistPubSup.py  producerMnistPubSup.py
Lab 4/milestone-3/: .dockerignore  .gitignore  env-setup.py
Lab 4/milestone-3/src/: producer.py
Lab 4/milestone-4/: README.md
Lab 4/milestone-4/voting_logger/: Dockerfile  docker-compose.yaml  logger.yaml  main.py
Lab 4/milestone-4/voting_machine/: main.py
Lab 4/milestone-4/voting_record/: Dockerfile  docker-compose.yaml  main.py  recorder.yaml
Lab 4/milestone-4/voting_record/postgres/: CreateTable.sql  Dockerfile
Lab 4/mnist-demo/: consumerMnistPubSup.py
