[project]
name = "depth_pro"
version = "0.1"
description = "Inference/Network/Model code for Apple Depth Pro monocular depth estimation."
readme = "README.md"
dependencies = [
    "torch",
    "torchvision",
    "timm",
    "numpy<2",
    "pillow_heif",
    "matplotlib",
    "onnx>=1.12.0", 
    "onnxslim", 
    "onnxruntime",
]

[project.urls]
Homepage = "https://github.com/apple/ml-depth-pro"
Repository = "https://github.com/apple/ml-depth-pro"
